--- a/app/assets/stylesheets/_layouts.css.scss
+++ b/app/assets/stylesheets/_layouts.css.scss
@@ -2,6 +2,7 @@ body#application {
 	// Mixins
 
 	// Box properties
+	padding: $grid * 3 0 0 0;
 
 	// Background & borders
 
@@ -13,7 +14,9 @@ body#application {
 		// Mixins
 	
 		// Box properties
+		height: $grid * 3;
 		// Background & borders
+		border-bottom: $border;
 		background-color: $brand;
 		// Typography
 	
@@ -74,7 +77,7 @@ body#application {
 	// Box properties
 	display: block;
 	height: $grid * 2;
-	width: $grid * 5;
+	width: $grid * 5.42;
 	overflow: hidden;
 	float: left;
 	// Background & borders
